--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
 </head>
 <body>
-    <script src="revision_.js"></script>
+    <div class="output" onclick="alert('hello')">javaScript</div>
+    <script src="app1.js">
+    </script>
+    
 </body>
 </html>
