this is dom in js

--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: white;
+        }
+    </style>
 </head>
-<body>
-    <div class="output" onclick="alert('hello')">javaScript</div>
-    <script src="app1.js">
-    </script>
+<body class="bg-black">
+    <div >
+        <h1 id="title" class="heading">DOM learning on chai aur code <span style="display: none;">test text</span></h1>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <form action="">
+        <input type="password">
+        </form>
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
+        <p>vel nam natus est dolores nostrum quae non error. Eum.</p>
+    </div>
     
 </body>
 </html>
