this promise in js

--- a/adavance_one.html
+++ b/adavance_one.html
@@ -31,5 +31,7 @@
  //console.log("HERE");
 
  xhr.send()
+ //console topic
+ //v8 engine github/src read this/d8check under src/and under it d8-console.cc
 </script>
 </html>
